problema de padding

--- a/desafios/d10/android.html
+++ b/desafios/d10/android.html
@@ -16,8 +16,7 @@
     <nav>
         <a class="d1" href="#">Home</a>
         <a class="d1" href="#">Notícias</a>
-        <a class="d1" href="#">Curiosidades</a>
-        <a class="d1" href="#">Fale Conosco</a>
+        <a class="d1" href="#">Contato</a>
     </nav>
     <main>
         <article>
