--- a/exercicios css/ex022/fundo006.html
+++ b/exercicios css/ex022/fundo006.html
@@ -7,17 +7,28 @@
     <title>Document</title>
     <style>
         body{
+            /*
             height: 100vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: repeat-y;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            */
+
+
+            /*shorthand - background
+            color > image > position > repeat > [ size] > attachment
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -50,6 +61,21 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam laboriosam corporis mollitia odio obcaecati omnis iure est fugiat, dolores, officiis ipsa. Amet nemo velit ipsam. Maiores laborum id dolor dolorem?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, temporibus quis quaerat sed delectus quisquam officia, ad dignissimos, cupiditate harum ratione! Aperiam labore esse et itaque soluta delectus id natus!
         </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, numquam praesentium! Ipsam aut, id accusantium quaerat ea provident laudantium et aspernatur fuga assumenda iure consequatur illo eaque at ullam
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis tempora fuga, alias odio cupiditate cumque cum est fugiat recusandae rerum nesciunt harum doloribus animi? Harum atque suscipit corporis corrupti asperiores?
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo facere dolorum inventore officia, rem sunt fugit ratione impedit in. Dolores placeat perferendis cupiditate reprehenderit id inventore sunt nobis autem neque?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae molestiae sit tenetur explicabo, unde error corporis labore veniam harum esse, ex eveniet animi facilis officiis perferendis dolores, ea in? Nihil.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero veritatis, ipsum optio totam commodi assumenda dolorem architecto vitae sit labore! Sed necessitatibus maiores veniam distinctio, sint ipsa porro iure omnis!
+            </p>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, cumque ut blanditiis explicabo placeat eius veritatis distinctio! Voluptates distinctio harum excepturi laudantium natus facilis ad, eveniet corrupti doloribus nihil? Quibusdam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, fuga officiis ipsa labore esse tenetur natus nemo error, obcaecati eum asperiores delectus doloribus ipsum molestiae consequuntur dolorum eveniet sapiente nulla. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi perspiciatis hic cupiditate in earum, voluptatem voluptatibus laudantium facilis ipsa, omnis illum non totam assumenda tempore, ipsum atque minima obcaecati. Distinctio.
+            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, numquam praesentium! Ipsam aut, id accusantium quaerat ea provident laudantium et aspernatur fuga assumenda iure consequatur illo eaque at ullam
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis tempora fuga, alias odio cupiditate cumque cum est fugiat recusandae rerum nesciunt harum doloribus animi? Harum atque suscipit corporis corrupti asperiores?
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo facere dolorum inventore officia, rem sunt fugit ratione impedit in. Dolores placeat perferendis cupiditate reprehenderit id inventore sunt nobis autem neque?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae molestiae sit tenetur explicabo, unde error corporis labore veniam harum esse, ex eveniet animi facilis officiis perferendis dolores, ea in? Nihil.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero veritatis, ipsum optio totam commodi assumenda dolorem architecto vitae sit labore! Sed necessitatibus maiores veniam distinctio, sint ipsa porro iure omnis!
+            </p>
     </main>
 </body>
 </html>
