--- a/Site/site.html
+++ b/Site/site.html
@@ -28,17 +28,9 @@
     
     </nav>
 
-    <nav class="navdestaque">
-
-        <a href="#">
-            Promoções do Mês
-
-        </a>
-
-    </nav>
-
     <main>
 
+        <a href="#" target="_blank" class="imagemanuncio"><img src="imagens/terno-exemplo.webp" alt=""></a>
 
 
     </main>
