--- a/exercicios css/ex023/tabela.html
+++ b/exercicios css/ex023/tabela.html
@@ -11,22 +11,21 @@
             background-color: darkgray;
         }
 
-        tr.linha{
-            background-color: cornflowerblue;
-        }
-
         table{
-            width: 20%;
+            width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
 
         td{
             border: 1px solid black;
             padding: 8px;
+            text-align: center;
+            vertical-align: middle;
         }
 
-        td.statistica{
-            background-color: blueviolet;
+        .numero{
+            text-align: right;
         }
     </style>
 </head>
@@ -35,7 +34,7 @@
 
     <table>
 
-        <tr class="linha">
+        <tr>
             <td>A1</td>
             <td>B1</td>
             <td>C1</td>
@@ -43,25 +42,22 @@
 
         <tr>
             <td>A2</td>
-            <td class="statistica">B2</td>
+            <td class="numero">B2</td>
             <td>C2</td>
         </tr>
 
         <tr>
             <td>A3</td>
-            <td>B3</td>
+            <td class="numero">B3</td>
             <td>C3</td>
         </tr>
 
         <tr>
             <td>A4</td>
             <td>B4</td>
+            <td>C4</td>
         </tr>
 
-        <tr>
-            <td>A5</td>
-        </tr>
-        
     </table>
 </body>
 </html>
