--- a/exercicios css/ex023/tabela02.html
+++ b/exercicios css/ex023/tabela02.html
@@ -13,6 +13,20 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
+        }
+
+        caption{
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: rgb(54, 54, 54) ;
         }
 
         td, th{
@@ -21,8 +35,17 @@
         }
 
         thead, tfoot{
-            background-color: gray;
+            background-color: rgb(54, 54, 54);
             color: white;
+        }
+
+        tbody > tr:nth-child(even){
+            background-color: rgb(181, 206, 231);
+            font-weight: bold;
+        }
+
+        tbody > tr:nth-child(odd){
+            background-color: rgb(156, 156, 156);
         }
 
         .nmr{
@@ -38,18 +61,21 @@
     <h1>Uso para tabelas grandes</h1>
 
     <table>
+
+        <caption>População das unidades federativas</caption>
+
         <thead>
             <tr>
-                <th>Posição</th>
-                <th>Estado</th>
-                <th>população</th>
+                <th scope="col">Posição</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="widht: 50px;">população</th>
             </tr>
         </thead>
 
         <tfoot>
             <tr>
-                <th></th>
-                <th>Total de habitantes</th>
+                <th scope="row"></th>
+                <th scope="row">Total de habitantes</th>
                     <td><strong>212,672.098</strong></td>
             </tr>
         </tfoot>
@@ -193,5 +219,9 @@
         </tbody>
         
     </table>
+
+    <p style="font-size:2em ;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, nulla iure voluptatibus delectus blanditiis suscipit quas? Repellat illo consequuntur quae dolor enim! Blanditiis qui excepturi sint quia vero soluta debitis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, distinctio! Voluptatum laboriosam, magnam dolores harum necessitatibus ad, vero obcaecati maiores magni dolore quam nemo nisi perferendis dolor, cumque eaque voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, hic itaque? Hic soluta deserunt iure nam perspiciatis, at itaque saepe, reprehenderit neque voluptas nostrum obcaecati quos maiores quidem doloribus architecto. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi dolorum nostrum labore incidunt nam possimus unde iste fuga, alias et facilis in! Quaerat delectus distinctio porro libero exercitationem quae commodi?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste voluptatibus in doloremque rem laudantium beatae dicta iusto accusantium sit harum officiis non vitae accusamus obcaecati placeat explicabo corrupti, esse laboriosam?</p>
+
+    <p style="font-size:2em ;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, nulla iure voluptatibus delectus blanditiis suscipit quas? Repellat illo consequuntur quae dolor enim! Blanditiis qui excepturi sint quia vero soluta debitis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, distinctio! Voluptatum laboriosam, magnam dolores harum necessitatibus ad, vero obcaecati maiores magni dolore quam nemo nisi perferendis dolor, cumque eaque voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, hic itaque? Hic soluta deserunt iure nam perspiciatis, at itaque saepe, reprehenderit neque voluptas nostrum obcaecati quos maiores quidem doloribus architecto. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi dolorum nostrum labore incidunt nam possimus unde iste fuga, alias et facilis in! Quaerat delectus distinctio porro libero exercitationem quae commodi?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste voluptatibus in doloremque rem laudantium beatae dicta iusto accusantium sit harum officiis non vitae accusamus obcaecati placeat explicabo corrupti, esse laboriosam?</p>
 </body>
 </html>
