--- a/exercicios css/ex024/paginasextras/pagiframe01.html
+++ b/exercicios css/ex024/paginasextras/pagiframe01.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas Responsivas</title>
+    <title>Test Site</title>
 
     <style>
 
         body{
             font-family: Arial, Helvetica, sans-serif;
-        }
+            background-color: lightgray;
+            color: black;
+            }
 
-        table{
+            table{
             border-collapse: collapse;
         }
 
@@ -28,27 +30,21 @@
         }
 
         tr:nth-child(even){
-            background-color:yellow;
+            background-color: yellow;
         }
 
         div#container{
             overflow-x: auto;
         }
-        </style>
+    </style>
 </head>
 <body>
-    
-    <h1>Tabelas Responsivas</h1>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam illo voluptatum dolor soluta, id quos doloremque quia velit ex eum? Enim distinctio magnam inventore, sint non voluptatibus nobis neque expedita.
-    </p>
-
     <div id="container">
         <table>
-            <caption>Tabelas Responsivas</caption>
+            <caption>Responsive Tables</caption>
             <thead>
                 <tr>
-                    <th>Produtos</th>
+                    <th>Product</th>
                     <th>Jan</th>
                     <th>Fev</th>
                     <th>Mar</th>
@@ -110,7 +106,7 @@
                     <td>11</td>
                 </tr>
                 <tr>
-                    <td>Sofá</td>
+                    <td>Couch</td>
                     <td>02</td>
                     <td>03</td>
                     <td>11</td>
