--- a/exercicios css/ex025/form01.html
+++ b/exercicios css/ex025/form01.html
@@ -16,7 +16,7 @@
     
     <h1>Meu primeiro Formulário</h1>
 
-        <form action="cadastro.php" autocomplete="off">
+        <form action="cadastro.php" method="post" autocomplete="off">
             
             <p>
                 <label for="inome">Nome:</label> 
